Added base64 decoding of claims values which are received from the PrivaKey authentication service